--- a/app/assets/stylesheets/bio.css.scss
+++ b/app/assets/stylesheets/bio.css.scss
@@ -1,13 +1,18 @@
-.bio-container {
-  max-width: 450px;
-  max-height: 500px;
+#bio-picture {
+  max-width: 100%;
+  height: auto;
+  width: auto\9; /* ie8 */
+}
+
+.bio-info {
+  max-height: 350px;
   overflow-y: scroll;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 40px;
-  font-family: 'lato-hai';
   font-weight: bold;
   font-size: 18px;
-  letter-spacing: 4px;
+  letter-spacing: 3px;
   border-radius: 15px;
+}
+
+.bio-container {
+  margin-top: 50px;
 }
